something to watch expense queue

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -43,6 +43,8 @@ components/
 
 ## Code Style & Conventions
 
+Don't create `index.ts` files. Instead, use direct file imports for clarity.
+
 ### TypeScript Standards
 
 - Use strict TypeScript configuration
