more expense queue changes

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -75,6 +75,7 @@ interface Props {
 - Use Tailwind utility classes via `className` prop
 - Custom brand colors defined in `tailwind.config.js`:
   - `harvest` (#266041) - Primary brand color
+  - `merlot` (#79242F) - Secondary brand color
   - `secondary-bg` (#F7F7F7) - Background gray
   - `primary-font` (#1F1F1F) - Text color
   - `primary-border` (#DFDFDF) - Border color
